--- a/sections_bg/expressivity.pod
+++ b/sections_bg/expressivity.pod
@@ -19,23 +19,24 @@ I<вие> да решите кое е най-четимо или полезно,
 X<TIMTOWTDI>
 X<Tim Toady>
 
-Perl hackers have a slogan for this: I<TIMTOWTDI>, pronounced "Tim Toady", or
-"There's more than one way to do it!"
+Perl-хакерите имат лозунг: I<TIMTOWTDI>, произнася се "Тим Тоуди" и означава
+"Има повече от един начин да се направи това!"
 
-Though this expressivity allows master craftworkers to create amazing programs,
-it allows the unwise or uncautious to make messes. Experience and good taste
-will guide you to write great code. The choice is yours--but be mindful of
-readability and maintainability, especially for those who come after you.
+Въпреки, че тази изразителност позволява на майсторите да създават изумителни
+програми, тя позволява и на невнимателните и неразумните да създават бъркотии.
+Опитът и добрият вкус ще ви напътстват в писането на велик код. Изборът е ваш,
+но мислете винаги доклоко е четим и как ще се поддържа кода ви от тези,
+които идват след вас.
 
-Perl novices often may find certain constructs opaque. Many of these idioms
-(L<idioms>) offer great (if subtle) power. It's okay to avoid them until you're
-comfortable with them.
+Новаците в Perl може би често се сблъскват с неразбираеми за тях конструкции.
+Много от тези идиоми (L<idioms>) предоставят голяма (макар и трудна за
+овладяване) мощ. Не е проблем ако ги избягвате, докато свикнете с тях.
 
-Learning Perl is like learning a new spoken language. You'll learn a few words,
-string together sentences, and soon will enjoy simple conversations.  Mastery
-comes with practice of reading and writing. You don't have to understand every
-detail of Perl to be productive, but the principles in this chapter are vital
-to your growth as a programmer.
+Да се учи Perl е като да учите нов говорим език. Ще научите няколко думи, ще ги
+съберете в изречение и скоро ще се радвате на простички разговори. Майсторлъка
+идва с практикуване на писането и четенето. Не е нужно да владеете всяка подробност,
+за да бъдете продуктивни, но принципите в тази глава са основополагащи
+за развитието ви като програмист.
 
 As another design goal, Perl tries to avoid surprising experienced (Perl)
 programmers.  For example, adding two variables (C<$first_num + $second_num>)
