--- a/sections_bg/chapter_10.pod
+++ b/sections_bg/chapter_10.pod
@@ -1,4 +1,6 @@
-=head0 Perl Одвъд синтаксиса
+=encoding utf8
+
+=head0 Perl Отвъд синтаксиса
 
 Бебешкия Perl ще ви доведе само дотук. Владеенето на езика ви позволява да ползвате 
 неговите наложилите се модели на писане и идиоми. Ефективните програмисти знаят как си 
