expressivity.pod seems done!

--- a/sections_bg/expressivity.pod
+++ b/sections_bg/expressivity.pod
@@ -34,18 +34,18 @@ Perl-хакерите имат лозунг: I<TIMTOWTDI>, произнася с
 Много от тези идиоми (L<idioms>) предоставят голяма (макар и трудна за
 овладяване) мощ. Не е проблем ако ги избягвате, докато свикнете с тях.
 
-Да се учи Perl е като да учите нов човешки език. Ще научите няколко думи, ще ги
+Да се учи Perl е като да учите нов говорим език. Ще научите няколко думи, ще ги
 съберете в изречение и скоро ще се радвате на простички разговори. Майсторлъкът
 идва с практикуване на писането и четенето. Не е нужно да владеете всяка
 подробност,за да бъдете продуктивни, но принципите в тази глава са
 основополагащи за развитието ви като програмист.
 
-Друга цел, която е изначално заложена в Perl, е да се намалят исненадите у
-опитните (Perl-) програмисти. например събрането на две променливи
+Друга цел, която е изначално заложена в Perl, е да се намалят изненадите у
+опитните (Perl-) програмисти. например събранието на две променливи
 (C<$first_num + $second_num>) очевидно е операция с числа (L<numeric_operators>).
-Операторът за събиране трябва да третира пададените му аргументи като числови
+Операторът за събиране трябва да третира подадените му аргументи като числови
 стойности и да произведе числов резултат. Независимо от съдържанието на
-C<$first_num> и C<$second_num>, Perl ще ги ползва като числови стоиности
+C<$first_num> и C<$second_num>, Perl ще ги ползва като числови стойности
 (L<numeric_coercion>). Вие сте изразили намерението си да ги третирате като
 числа, използвайки оператора за събиране. Perl го прави с удоволствие.
 
@@ -104,9 +104,10 @@ X<бебешки Perl>
 И трите подхода постигат един и същи резултат, но всеки от тях ползва
 Perl по различен начин.
 
-Experience writing Perl will help you to focus on I<what> you want to do rather
-than I<how> to do it. Even so, Perl will happily run simple programs. You can
-design and refine your programs for clarity, expressivity, reuse, and
-maintainability, in part or in whole. Take advantage of this flexibility and
-pragmatism: it's far better to accomplish your task effectively now than to
-write a conceptually pure and beautiful program next year.
+Опитът в писането на Perl ще ви помогне да се фокусирате върху I<това, което
+искате да направите>, а не върху това I<как> да го направите.
+Във всеки случай, Perl безпрекословно ще изпълнява прости програми.
+Може да доизкусурявате програмите си, да ги правите по-изразителни, по-ясни,
+по-лесни за поддръжка, да преизползвате код. Възползвайте се от тази гъвкавост
+и прагматизъм. Много по-добре да изпълните задачата си ефективно сега,отколкото
+да имате концептуално изчистена и красива програма след година.
