--- a/sections_bg/expressivity.pod
+++ b/sections_bg/expressivity.pod
@@ -37,11 +37,11 @@ Perl-хакерите имат лозунг: I<TIMTOWTDI>, произнася с
 Да се учи Perl е като да учите нов говорим език. Ще научите няколко думи, ще ги
 съберете в изречение и скоро ще се радвате на простички разговори. Майсторлъкът
 идва с практикуване на писането и четенето. Не е нужно да владеете всяка
-подробност,за да бъдете продуктивни, но принципите в тази глава са
+подробност, за да бъдете продуктивни, но принципите в тази глава са
 основополагащи за развитието ви като програмист.
 
 Друга цел, която е изначално заложена в Perl, е да се намалят изненадите у
-опитните (Perl-) програмисти. например събранието на две променливи
+опитните (Perl-) програмисти. Например събранието на две променливи
 (C<$first_num + $second_num>) очевидно е операция с числа (L<numeric_operators>).
 Операторът за събиране трябва да третира подадените му аргументи като числови
 стойности и да произведе числов резултат. Независимо от съдържанието на
@@ -66,7 +66,7 @@ X<бебешки Perl>
 Всеки е новак в началото. Чрез практика и като учите от по-опитните програмисти,
 ще усвоите и разберете по-мощните идиоми и техники.
 
-Опитният Perl-хакер например би умножил всеки елемент от даден списък с числа
+Опитният Perl-хакер например би умножил по три всеки елемент от даден списък с числа
 по следния начин:
 
 =begin programlisting
@@ -109,5 +109,5 @@ Perl по различен начин.
 Във всеки случай, Perl безпрекословно ще изпълнява прости програми.
 Може да доизкусурявате програмите си, да ги правите по-изразителни, по-ясни,
 по-лесни за поддръжка, да преизползвате код. Възползвайте се от тази гъвкавост
-и прагматизъм. Много по-добре да изпълните задачата си ефективно сега, отколкото
+и прагматизъм. Много по-добре е да изпълните задачата си ефективно сега, отколкото
 да имате концептуално изчистена и красива програма след година.
