this is may be unneeded now

--- a/sections_bg/idioms.pod
+++ b/sections_bg/idioms.pod
@@ -1,8 +1,10 @@
+=encoding utf8
+
 =head1 Идиоми
 
 Z<idioms> 
 
-Всеки език --човешки или програмен-- има общоприети изрази, наричани още идиоми. Земята
+Всеки език -- човешки или програмен -- има общоприети изрази, наричани още идиоми. Земята
 се върти, но ние говорим за изгреви и залези. Хвалим се и се умилкваме около мръсни и 
 остроумни хакове докато размятаме код наляво и надясно.
 
