--- a/sections_bg/expressivity.pod
+++ b/sections_bg/expressivity.pod
@@ -55,14 +55,15 @@ X<принцип на минималната изненада>
 Опитните Perl-програмисти често наричат това 
 I<принципът DWIM> - I<do what I mean> (I<правѝ каквото си мисля>).
 Казано по друг начин, Perl следва I<принципът на минималната изненада>.
-Ако имате повърхностни знания за Perl (особено по отношение на контекста; L<context_philosophy>), би трябвало лесно да разберете намерението, което
+Ако имате повърхностни знания за Perl (особено по отношение на контекста;
+L<context_philosophy>), би трябвало лесно да разберете намерението, което
 е имал авторът на непознат за вас израз в Perl. Ще развиете това умение.
 
 X<бебешки Perl>
 
 Изразителността на Perl също позволява на новаците да пишат полезни програми,
 без да е необходимо да разбират всичко. Резултатът от такова писане, често се
-нарича I<baby Perl>. Всеки иска да помогне на бебетата да общуват добре.
+нарича I<бебешки Perl>. Всеки иска да помогне на бебетата да общуват добре.
 Всеки е новак в началото. Чрез практика и като учите от по-опитните програмисти,
 ще усвоите и разберете по-мощните идиоми и техники.
 
