Added vocabulary to the build (for now). translated some more about context

--- a/sections_bg/chapter_00.pod
+++ b/sections_bg/chapter_00.pod
@@ -104,3 +104,7 @@ U<http://search.cpan.org/perldoc?App::perlbrew>>.
 L<credits> 
 
 За всички останали грешки, вината е единствено на твърдоглавия автор. 
+
+The vocabulary below will be removed right before finishing the translation.
+
+L<vocabulary>
