Added translator's note

--- a/sections_bg/idioms.pod
+++ b/sections_bg/idioms.pod
@@ -21,7 +21,8 @@ X<methods; invocant>
 X<CPAN; C<MooseX::Method::Signatures>> 
 
 Системата (L<moose>) за писане на обектно-ориентиран Perl 5 третира извикващия клас или
-обект като обикновен параметър на метода. Независимо дали извиквате метод на клас или 
+обект като обикновен параметър на методаN<Всъщност Perl 5 така си работи (бел. прев.)>. 
+Независимо дали извиквате метод на клас или 
 метод на обект, първият елемент от масива с параметрите C<@_> е това, което извиква 
 метода - клас или обект. По конвенция в повечето Perl 5-код се използват имена на 
 променливи като C<$class> и C<$self>, за да обозначат как се извиква даден метод. Тази 
