--- a/sections_bg/context_philosophy.pod
+++ b/sections_bg/context_philosophy.pod
@@ -45,18 +45,19 @@ I<Количественият контекст> определя броя на 
 най-вероятно разбирате грешката в изречението "Perl са забавен език".
 В Perl получаваш толкова стойности колкото си заявилN<Представете си го като единствено и множествено число в човешките езици. (бел. прев.)>.
 
-X<void context>
-X<context; void>
+X<празен контекст>
+X<контекст; празен>
 
-Suppose you have a function (L<functions>) called C<find_chores()> which sorts
-your household todo list in order of task priority. The means by which you call
-this function determines what it will produce. You may have no time to do
-chores, in which case calling the function is an attempt to look industrious.
-You may have enough time to do one task, or you could have a burst of energy on
-a free weekend and desire to accomplish as much as possible.
+Нека предположим, че имате функция (L<functions>), наречена C<find_chores()>,
+която подрежда списъка с къщните ви задачи по приоритет. Начинът, по който
+извиквате тази функция, определя какво ще върне тя. Може би нямате време за
+домакинска работа и извикването на функцията е само начин да изглеждате много
+трудолюбив. Може и да имате време за една задачка от списъка, а може и да сте
+изпълнени с енергия през почивните дни и да искате да свършите колкото
+се може повече.
 
-If you call the function on its own and never use its return value, you've
-called the function in I<void context>:
+Ако извикате функцията без да използвате върната от нея стойност, вие сте я
+извикали в I<празен контекст>:
 
 =begin programlisting
 
