--- a/sections_bg/context_philosophy.pod
+++ b/sections_bg/context_philosophy.pod
@@ -4,7 +4,7 @@
 
 Z<context_philosophy>
 
-X<context>
+X<контекст>
 
 В говоримите езици значението на една дума или фраза може да зависи
 от начина, по който се използва. Текущият I<контекст> изяснява специфичното
@@ -43,7 +43,8 @@ I<Количественият контекст> определя броя на 
 операция. Съгласуването на глаголите по число е добър пример от английския език. 
 Дори без да знаете формалното определение за този лингвистичен принцип,
 най-вероятно разбирате грешката в изречението "Perl са забавен език".
-В Perl получаваш толкова стойности колкото си заявилN<Представете си го като единствено и множествено число в човешките езици. (бел. прев.)>.
+В Perl получаваш толкова стойности колкото си заявилN<Представете си го като 
+единствено и множествено число в човешките езици. (бел. прев.)>.
 
 X<празен контекст>
 X<контекст; празен>
@@ -65,11 +66,11 @@ X<контекст; празен>
 
 =end programlisting
 
-X<context; scalar>
-X<scalar context>
+X<контекст; скаларен>
+X<скаларен контекст>
 
-Assigning the function's return value to a single item (L<scalars>) evaluates
-the function in I<scalar context>:
+Като присвоите върнатия от функцията резултат на скаларна (единична) променлива (L<scalars>), вие я 
+изпълнявате в I<скаларен контекст>:
 
 =begin programlisting
 
