--- a/sections_bg/chapter_06.pod
+++ b/sections_bg/chapter_06.pod
@@ -1,6 +1,6 @@
 =encoding utf8
 
-=head0 Regular Expressions and Matching
+=head0 Съгласуване с шаблони
 
 Z<regex>
 
@@ -8,17 +8,20 @@ X<regular expressions>
 X<regex>
 X<regex; engine>
 
-Perl's text processing power comes from its use of I<regular expressions>.  A
-regular expression (I<regex> or I<regexp>) is a I<pattern> which describes
-characteristics of a piece of text. A I<regular expression engine> interprets
-patterns and applies them to match or modify pieces of text.
+Възможностите на Perl за обработка не текстове се коренят в I<регулярните
+изрази>.  Регулярните изрази (I<regex> или I<regexp>) представляват I<шаблон>
+описващ характеристиките на част от текст. I<Машината за съгласуване>
+интерпретира шаблоните и ги прилага върху текста с цел да намери съвпадение или
+неговата промяна.
 
-Perl's core regex documentation includes a tutorial (C<perldoc perlretut>), a
-reference guide (C<perldoc perlreref>), and full documentation (C<perldoc
-perlre>). Jeffrey Friedl's book I<Mastering Regular Expressions> explains the
-theory and the mechanics of how regular expressions work. While mastering
-regular expressions is a daunting pursuit, a little knowledge will give you
-great power.
+
+Основната документация на Perl включва самоучител (C<perldoc perlretut>),
+справочник (C<perldoc perlreref>) и подробна документация (C<perldoc
+perlre>). Книгата на Джефри Фрайдъл I<Mastering Regular Expressions> обяснява
+теорията и механиката за това как работят регулярните изрази. Усъвършенстването
+на регулярните изрази може да е обезсърчаващо занимание, но тяхното познаване ще
+ви даде огромни възможности.
+
 
 L<regular_expressions>
 
